kubernetes-services/additions/istio/jaeger-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-ui
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway/non-tls-gateway
  http:
    - match:
        - uri:
            prefix: /jaeger/
        - uri:
            exact: /jaeger
      route:
        - destination:
            host: istio-system-jaeger-query
            port:
              number: 16686
